--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-spring.application.name=ticketing_project_rest_v2
+server.port=8081
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/ticketing-app-v2
+spring.datasource.username=postgres
+spring.datasource.password=faith
+
+spring.jpa.show-sql=true
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.ddl-auto=create
+
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
