--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.cydeo</groupId>
-    <artifactId>ticketing-project-rest</artifactId>
+    <artifactId>ticketing_project_rest_v2</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>ticketing-project-rest</name>
-    <description>ticketing-project-rest</description>
+    <name>ticketing_project_rest_v2</name>
+    <description>ticketing_project_rest_v2</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -41,7 +41,6 @@
             <artifactId>modelmapper</artifactId>
             <version>3.1.0</version>
         </dependency>
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -51,11 +50,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.keycloak</groupId>
-            <artifactId>keycloak-spring-boot-starter</artifactId>
-            <version>18.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
