--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,12 @@ spring.jpa.hibernate.ddl-auto=create
 
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
+
+keycloak.realm=ticketing-realm
+keycloak.auth-server-url=http://localhost:8080/auth
+keycloak.ssl-required=external
+keycloak.resource=ticketing-app-v2
+keycloak.credentials.secret=m6luQ8LEUEwqZ07AgiU77tDLdc0ZEUUI
+keycloak.use-resource-role-mappings=true
+keycloak.bearer-only=true
+spring.main.allow-circular-references=true
