--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -5,7 +5,7 @@ appenders=console, rolling
 appender.console.type=console
 appender.console.name=STDOUT
 appender.console.layout.type=PatternLayout
-appender.console.layout.patter=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
+appender.console.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 
 loggers=rolling
 
