--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -16,7 +16,7 @@ rootLogger.appenderRef.console.ref=STDOUT
 appender.rolling.type=RollingFile
 appender.rolling.name=ROLLINGLOGFILE
 appender.rolling.fileName=${path}/rolling_app.log
-appender.rolling.filePattern=${path}/rolling_app%d{yyyy-MM-dd HH:mm}.log
+appender.rolling.filePattern=${path}/rolling_app%d{HH-mm-ss-SSS}.log
 appender.rolling.layout.type=PatternLayout
 appender.rolling.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 
